tests/ui/issues/issue-47184.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-47184.rs:2:44
   |
LL |     let _vec: Vec<&'static String> = vec![&String::new()];
   |               --------------------         ^^^^^^^^^^^^^ - temporary value is freed at the end of this statement
   |               |                            |
   |               |                            creates a temporary value which is freed while still in use
   |               type annotation requires that borrow lasts for `'static`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0716`.
