tests/ui/issues/issue-47184.rs
fn main() {
    let _vec: Vec<&'static String> = vec![&String::new()];
    //~^ ERROR temporary value dropped while borrowed [E0716]
}
